--- a/views/signUpConfirm.html
+++ b/views/signUpConfirm.html
@@ -1,11 +1,67 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <title>Bem vindo ao MealSet!</title>
+
+    <style>
+        .jumbotron {
+            margin-top: 9%;
+            background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.20)), url("https://images.pexels.com/photos/1640777/pexels-photo-1640777.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
+            background-size: cover;
+            text-align: center;
+            color: white;
+        }
+        h1 {
+            text-shadow: 1px 1px #000000;
+        }
+    </style>
 </head>
-<body>
-    <h1>Welcome {{name}}</h1>
+
+<body >
+        <div class="jumbotron jumbotron-fluid">
+
+            <div class="container">
+                <br>
+                <hr class="my-2">
+                <br>
+                <h1 class="font-weight-bold">Olá {{name}}, bem vindo ao MealSet.</h1>
+                <br> <br>
+                <h2>A tua conta foi registada com sucesso.</h2>
+                <br>
+                <h4>Volta à página inicial para iniciares sessão.</h4>
+                <br> <br>
+                    <a class="btn btn-light btn-lg" href="https://johnwink.github.io/mealsetfinal/#/"
+                        role="button">Voltar</a>
+          <br>
+                <br>
+                <hr class="my-2">
+                <br>
+
+
+
+            </div>
+        </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
